<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/order_accepted" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_order_has_been_accepted"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_items_has_been_placed_and_is_on_n_the_way_to_be_processed"
            android:textAlignment="center" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/primary_button"
        android:text="@string/ok_thank_you"
        android:textColor="@android:color/white" />

</RelativeLayout>