<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="signInViewModel"
            type="com.hieuwu.groceriesstore.presentation.authentication.SignInViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".presentation.authentication.SignInFragment">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@drawable/login_background"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:id="@+id/fullscreen_content_controls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/rounded_background"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingTop="32dp">

                <TextView
                    android:id="@+id/singin_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/margin_medium"
                    android:fontFamily="monospace"
                    android:text="@string/sign_in"
                    android:textColor="@android:color/black"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:hint="@string/email"
                    android:text="@={signInViewModel.email}"/>

                <EditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="@={signInViewModel.password}"/>

                <Button
                    android:id="@+id/signin_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/margin_medium"
                    android:background="@drawable/primary_button"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="150dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_an_account" />

                    <TextView
                        android:id="@+id/sign_up_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:fontFamily="monospace"
                        android:text="@string/sign_up"
                        android:textColor="@color/primary_button"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </FrameLayout>
</layout>
