<?xml version="1.0" encoding="utf-8"?>
<layout>
<data>
    <variable
        name="viewModel"
        type="com.hieuwu.groceriesstore.presentation.updateprofile.UpdateProfileViewModel" />
</data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.updateprofile.UpdateProfileFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:contentInsetStartWithNavigation="0dp"
                app:menu="@menu/update_menu"
                app:navigationIcon="@drawable/ic_detail_back"
                app:title="Update Profile"
                app:titleCentered="true"
                app:titleTextColor="@android:color/white"
                app:toolbarId="@id/toolbar" />
        </com.google.android.material.appbar.AppBarLayout>

        <EditText
            android:id="@+id/receiver_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_small"
            android:ems="10"
            android:text="@={viewModel.name}"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/receiver_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_small"
            android:ems="10"
            android:text="@={viewModel.phoneNumber}"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_small"
            android:ems="10"
            android:hint="@string/email"
            android:text="@={viewModel.email}"
            android:textColor="@android:color/black" />
    </LinearLayout>
</layout>
